TestSuite/errors/err0201.pas
uses System;

type TClass = interface

[System.Runtime.InteropServices.DllImport('MyLib.dll')]
procedure Test;
end;

begin
  
end.